<resources>
    <string name="app_name">Quandary Aid</string>
    <string name="title_activity_welcome">Login/Signup</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcoming You To A Safer Future</string>
    <string name="slide_1_title2">Lets Get Started!!!</string>
    <string name="slide_1_desc"></string>
    <string name="incorrect_fields"> No such entry found</string>

    <string name="slide_2_title">Good Samaritan law</string>
    <string name="slide_2_desc">Legal protection to people who give reasonable assistance to those who are in need of it.</string>

    <string name="slide_3_title">At Any Location</string>
    <string name="slide_3_desc">Providing Fastest And Best Help To You Where Ever You Are.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="username_hint">Username</string>
    <string name="username_id_hint">Email id/Employee id</string>

    <string name="password_hint">Password</string>
    <string name="con_password_hint"> Confirm Password</string>

    <string name="login_hint">Login</string>

    <string name="empty_fields">Some fields are empty</string>
    <string name="json_error">Error in receiving json</string>
    <string name="load">Loading</string>

    <string name="email">E-mail id</string>
    <string name="empid">Employee id</string>

    <string name="photo">Upload Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="emp_id">Enter Employee Aadhar ID</string>
    <string name="nav_dash">Dashboard</string>
    <string name="nav_ahelp">Ask For Help</string>
    <string name="nav_phelp">Provide Help</string>
    <string name="nav_sponsers">Our Sponsers</string>
    <string name="nav_qastore">QA Store</string>
    <string name="nav_faid">First Aid Tutorials</string>
    <string name="nav_support">Support</string>
    <string name="nav_coninf">Contact Information</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="toolbar_p">Punch In/Out</string>
    <string name="contactno">Contact No</string>
    <string name="title_activity_contact_information">ContactInformation</string>
    <string name="title_activity_types_help">TypesHelp</string>
    <string name="ne">Non-Emergency</string>
    <string name="em">Emergency</string>
    <string name="ws">Women help</string>
    <string name="way">Asked For Help</string>
    <string name="track">Track Your Helper</string>
    <string name="cl">Clinics</string>
    <string name="ps">Police Stations</string>
    <string name="hs">Hospitals</string>
    <string name="nav_fnb">Find Nearby</string>

    <string name="nav_mh">Major Helpers</string>

</resources>