<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/par"
    android:background="@color/bg_screen1"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
<LinearLayout
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <Button
        android:id="@+id/emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/bg_screen1"
        android:background="@drawable/ripple_enable"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:elevation="10dp"
        android:text="@string/em" />
    <Button
        android:id="@+id/nonemergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/bg_screen1"
        android:background="@drawable/ripple_enable"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:elevation="10dp"
        android:text="@string/ne" />
    <Button
        android:id="@+id/women"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/bg_screen1"
        android:background="@drawable/ripple_enable"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:elevation="10dp"
        android:text="@string/ws" />

</LinearLayout>

    <Button
        android:id="@+id/track"
       android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:background="@drawable/ripple_disable"
        android:elevation="10dp"
        android:gravity="center|bottom"
        android:padding="15dp"
        android:text="@string/track"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
</RelativeLayout>