<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg_screen1"

    android:layout_height="match_parent"
    android:fadeScrollbars="true">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:screenOrientation="portrait"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="42dp"
                android:minWidth="42dp"
                android:maxWidth="90dp"
                android:maxHeight="90dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/log" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/EditTextHint"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"

                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/username_hint"
                    android:textAlignment="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/EditTextHint"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/password_hint"
                    android:textColor="@color/colorPrimary"

                    android:inputType="textPassword"
                    android:textAlignment="center" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/bg_screen1"
                android:background="@drawable/ripple_enable"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:text="@string/login_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:text="or" />

            <Button
                android:id="@+id/signup"
                android:elevation="10dp"
                android:textColor="@color/bg_screen1"
                android:background="@drawable/ripple_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Signup" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>